more overflow fixing

--- a/styles/notion.css
+++ b/styles/notion.css
@@ -46,7 +46,7 @@
 .notion-header .notion-nav-header {
   max-width: 1100px;
   margin: 0 auto;
-  overflow-x: auto;
+  overflow-x: hidden;
 }
 
 .notion-nav-header-rhs {
@@ -70,7 +70,7 @@
 
 .notion-gallery-grid .notion-collection-card-property {
   white-space: unset;
-  text-overflow: unset;
+  text-overflow: hidden;
 }
 
 .notion-gallery-grid .notion-property-text {
